--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -296,7 +296,7 @@
                 </p>
 
                 <!-- Volvemos a usar el HTML estático que ya funcionaba -->
-                <a href="/formulario-de-matricula-main/index.html" class="btn btn-secondary" target="_blank">
+                <a asp-controller="Matricula" asp-action="Crear" class="btn btn-secondary">
                     <span class="span">Matricúlate Aquí</span>
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
